[gd_scene load_steps=3 format=3 uid="uid://dh0oj81pufivs"]

[ext_resource type="Script" uid="uid://clmfltu5op357" path="res://multiple.gd" id="1_hsxc6"]
[ext_resource type="VideoStream" uid="uid://g7m1x0s07r0" path="res://ST_UHD_60p_H264_Gitter_Kreise_Ton_5_1.mp4" id="2_hsxc6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hsxc6")

[node name="container" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="video" type="VideoStreamPlayer" parent="container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stream = ExtResource("2_hsxc6")
autoplay = true
expand = true
loop = true

[node name="video_dynamic" type="VideoStreamPlayer" parent="container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="video_tex" type="TextureRect" parent="container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 2

[node name="video_dynamic2" type="VideoStreamPlayer" parent="container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="video_tex2" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 962.0
offset_top = 542.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="seconds" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 119.0
offset_bottom = 53.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
